--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
 	"devDependencies": {
 		"babel-jest": "20.0.0",
 		"babel-preset-react-native": "1.9.1",
+		"eslint": "^3.19.0",
+		"eslint-config-standard": "^10.2.1",
+		"eslint-config-standard-react": "^5.0.0",
+		"eslint-plugin-import": "^2.2.0",
+		"eslint-plugin-node": "^4.2.2",
+		"eslint-plugin-promise": "^3.5.0",
+		"eslint-plugin-react": "^7.0.0",
+		"eslint-plugin-standard": "^3.0.1",
 		"jest": "20.0.0",
 		"react-test-renderer": "16.0.0-alpha.6"
 	},
