--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.6",
-		"react-native": "0.44.0"
+		"react-native": "0.44.0",
+		"react-native-bluetooth-serial": "^1.0.0-rc1",
+		"react-native-router-flux": "^3.39.1"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.0",
